Fix calculator alignment to center

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@ body {
     background-color: $VeryDarkDesaturatedBlue1;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     height: 100vh;
     font-family: 'League Spartan', sans-serif;
 
